<resources>
    <string name="app_name">My Demo App</string>
    <string name="catalog">Catalog</string>
    <string name="webview">WebView</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="geo_location">Geo Location</string>
    <string name="drawing">Drawing</string>
    <string name="about">About</string>
    <string name="app_reset_state">Reset App State</string>
    <string name="biometrics">Biometrics</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="sort_by">Sort by:</string>
    <string name="name_asc">Name - Ascending</string>
    <string name="name_des">Name - Descending</string>
    <string name="price_asc">Price - Ascending</string>
    <string name="price_des">Price - Descending</string>
    <string name="login_title">Login</string>
    <string name="select_username_and_password_from_below">Select a username and password from the list below, or click on the username to automatically populate the username and password.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="webview_">Webview</string>
    <string name="url">URL</string>
    <string name="url_hint">https://www.website.com</string>
    <string name="enter_an_https_url">Enter an HTTPS url</string>
    <string name="go_to_site">Go To Site</string>
    <string name="go_to_website"><u>Go to the Sauce Labs website.</u></string>
    <string name="location_details">Below you will find the latitude and longitude. This screen will automatically start with observing the location. You can manually disable/enable  it by clicking on the buttons. It will automatically stop observing the location when you leave the screen.</string>
    <string name="link"><u>this link.</u></string>
    <string name="link_details">You can use Appium to change them with</string>
    <string name="determine_position">Determining the position on Android can take a while.</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="start_observing">Start Observing</string>
    <string name="stop_observing">Stop Observing</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="allow_bio_login">Allow login with FingerPrint</string>
    <string name="biometric_info">If your device supports FingerPrint you can enable it here. This will help you to easily log in.</string>
    <string name="biometric_info_">Normally this screen would be behind a secure login, but for demo purposes this screen has been put in the menu by default.</string>
    <string name="my_cart">My Cart</string>
    <string name="no_items">No Items</string>
    <string name="oh_no_your_cart_is_empty_fill_it_up_with_swag_to_complete_your_purchase">Oh no! Your cart is empty. Fill it up with swag to complete your purchase.</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="loading">Loading ...</string>
    <string name="oh_no">Oh no!!!</string>
    <string name="ok">Ok</string>
    <string name="checkout">Checkout</string>
    <string name="enter_a_shipping_address">Enter a shipping address</string>
    <string name="fullname">Full Name*</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City*</string>
    <string name="state_region">State/Region</string>
    <string name="zip_code">Zip Code*</string>
    <string name="country">Country*</string>
    <string name="to_payment">To Payment</string>
    <string name="color">Color:</string>
    <string name="close_model">Close Model</string>
    <string name="thank_you_for_submitting_your_review">Thank you for submitting your review!</string>
    <string name="review_order">Review Order</string>
    <string name="payment_details">You will not be charged until you review your purchase on the next screen.</string>
    <string name="card">Card</string>
    <string name="enter_a_payment_method">Enter a payment method</string>
    <string name="card_number">Card Number*</string>
    <string name="expiration_date">Expiration Date*</string>
    <string name="value_looks_invalid">Value looks invalid.</string>
    <string name="billing_address_same">My billing address is the same as my shipping address.</string>
    <string name="security_code">Security Code*</string>
    <string name="security_code_tip">CVV is the last three digits on the back of your credit card.</string>
    <string name="review_your_order">Review your order</string>
    <string name="deliver_address">Deliver Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="dhl_standard_delivery">DHL Standard Delivery</string>
    <string name="social_text">2021 Sauce Labs All Rights Reserved Terms of Services | Privacy Policy</string>
    <string name="total">Total:</string>
    <string name="place_order">Place Order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="products">Products</string>
    <string name="biomatric_message">Biometric is or not supported or not enable on your device. Please check your device or your settings.</string>
    <string name="bod_example_com"><u>bod@example.com</u></string>
    <string name="alice_example_com_locked_out"><u>alice@example.com (locked out)</u></string>
    <string name="items">Items</string>
    <string name="enter_password">Enter Password</string>
    <string name="soory_this_user_has_been_locked_out">Sorry this user has been locked out.</string>
    <string name="you_have_successfully_loggedout">You are Successfully logged out.</string>
    <string name="sauce_labs_all_rights_reserved_terms_of_service_privacy_policy">&#169; 2021 Sauce Labs All Rights Reserved. Terms of Service | Privacy Policy</string>
    <string name="fingerprint">FingerPrint</string>
    <string name="_continue">Continue</string>
    <string name="tap_to_rate_an_item_1_star">Tap to rate an item 1 star</string>
    <string name="tap_to_rate_an_item_2_star">Tap to rate an item 2 star</string>
    <string name="tap_to_rate_an_item_3_star">Tap to rate an item 3 star</string>
    <string name="tap_to_rate_an_item_4_star">Tap to rate an item 4 star</string>
    <string name="tap_to_rate_an_item_5_star">Tap to rate an item 5 star</string>
    <string name="to_show_which_sorting_order_is_selected">Shows which sorting order is selected</string>
    <string name="displays_descending_sorting_order_by_price">Displays descending sorting order by price</string>
    <string name="displays_ascending_sorting_order_by_price">Displays ascending sorting order by price</string>
    <string name="displays_descending_sorting_order_by_name">Displays descending sorting order by name</string>
    <string name="displays_ascending_sorting_order_by_name">Displays ascending sorting order by name</string>
    <string name="ascending_order_by_name">Ascending order by name</string>
    <string name="descending_order_by_name">Descending order by name</string>
    <string name="ascending_order_by_price">Ascending order by price</string>
    <string name="descending_order_by_price">Descending order by price</string>
    <string name="recycler_view_for_menu">Recycler view for menu</string>
    <string name="displays_number_of_items_in_your_cart">Displays number of items in your cart</string>
    <string name="tap_to_view_you_cart">Tap to view you cart</string>
    <string name="tap_to_view_menu">Tap to view menu</string>
    <string name="displays_selected_product">Displays selected product</string>
    <string name="shows_rating_of_product">Shows rating of product</string>
    <string name="reduces_number_of_products">Reduces number of products</string>
    <string name="increases_number_of_products">Increases number of products</string>
    <string name="remove_item">Remove Item</string>
    <string name="removes_product_from_cart">Removes product from cart</string>
    <string name="displays_color_of_selected_product">Displays color of selected product</string>
    <string name="displays_color_of_product">Displays color of product</string>
    <string name="indicates_when_color_is_selected">Indicates when color is selected</string>
    <string name="app_logo">App logo</string>
    <string name="please_provide_a_correct_https_url">Please provide a correct https url.</string>
    <string name="tap_to_view_content_of_given_url">Tap to view content of given url</string>
    <string name="tap_to_add_product_to_cart">Tap to add product to cart</string>
    <string name="displays_available_colors_of_selected_product">Displays available colors of selected product</string>
    <string name="the_sauce_labs_backpack_is_the">The Sauce Labs Backpack is the best of all worlds - infinite capacity and endless style. Fits in comfortably a laptop up to 15 inch. Never leave a thing behind and forget you have your world on your shoulders.</string>
    <string name="product_highlights">Product Highlights</string>
    <string name="displays_all_products_of_catalog">Displays all products of catalog</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="scrollview_manages_views_in_given_screen_size">Scrollview manages views in given screen size</string>
    <string name="displays_selected_products">Displays selected products</string>
    <string name="manages_scrolling_of_views_in_given_screen">Manages scrolling of views in given screen</string>
    <string name="completes_the_process_of_checkout">Completes the process of checkout</string>
    <string name="indicates_error">Indicates error</string>
    <string name="username_is_required">Username is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="tap_to_login_with_given_credentials">Tap to login with given credentials</string>
    <string name="tap_to_use_this_username_for_login">Tap to use this username for login</string>
    <string name="tap_to_visit_given_web_address">Tap to visit given web address</string>
    <string name="start_observation_of_user_location">Start observation of user location</string>
    <string name="stop_observation_of_user_location">Stop observation of user location</string>
    <string name="pad_to_draw_on">Pad to draw on</string>
    <string name="removes_anything_drawn_on_pad">Removes anything drawn on pad</string>
    <string name="save_anything_drawn_on_pad">Save anything drawn on pad</string>
    <string name="saves_user_info_for_checkout">Saves user info for checkout</string>
    <string name="tap_to_open_catalog">Tap to open catalog</string>
    <string name="select_if_user_billing_address_and_shipping_address_are_same">Select if User billing address and shipping address are same</string>
    <string name="saves_payment_info_and_launches_screen_to_review_checkout_data">Saves payment info and launches screen to review checkout data</string>
    <string name="mastercard">Mastercard</string>
    <string name="visa_card">Visa card</string>
    <string name="confirms_products_for_checkout">Confirms products for checkout</string>
    <string name="image_of_cart">Image of cart</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="enable_or_disable_biometric_login">Enable or disable biometric login</string>
    <string name="sauce_labs_mascot">Sauce labs mascot</string>
    <string name="app_logo_and_name">App logo and name</string>
    <string name="container_for_fragments">Container for fragments</string>
    <string name="closes_review_dialog">Closes review dialog</string>
    <string name="sauce_labs_pony_express">Sauce Labs Pony Express</string>
</resources>