<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/start1IV"
                android:layout_width="@dimen/dimen_size"
                android:layout_height="@dimen/dimen_size"
                android:src="@drawable/ic_unselected_start"
                android:contentDescription="@string/tap_to_rate_an_item_1_star" />
            <ImageView
                android:id="@+id/start2IV"
                android:layout_width="@dimen/dimen_size"
                android:layout_height="@dimen/dimen_size"
                android:layout_marginStart="5sp"
                android:src="@drawable/ic_unselected_start"
                android:contentDescription="@string/tap_to_rate_an_item_2_star" />
            <ImageView
                android:id="@+id/start3IV"
                android:layout_width="@dimen/dimen_size"
                android:layout_height="@dimen/dimen_size"
                android:layout_marginStart="5sp"
                android:src="@drawable/ic_unselected_start"
                android:contentDescription="@string/tap_to_rate_an_item_3_star" />
            <ImageView
                android:id="@+id/start4IV"
                android:layout_width="@dimen/dimen_size"
                android:layout_height="@dimen/dimen_size"
                android:layout_marginStart="5sp"
                android:src="@drawable/ic_unselected_start"
                android:contentDescription="@string/tap_to_rate_an_item_4_star" />
            <ImageView
                android:id="@+id/start5IV"
                android:layout_width="@dimen/dimen_size"
                android:layout_height="@dimen/dimen_size"
                android:layout_marginStart="5sp"
                android:src="@drawable/ic_unselected_start"
                android:contentDescription="@string/tap_to_rate_an_item_5_star" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
