<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.BiometricFragment">

    <TextView
        android:id="@+id/bioMetricTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/titleMarginTop"
        android:textSize="@dimen/titleTextSize"
        android:textStyle="bold"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/bioMetricSw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_bio_login"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="16dp"
        android:contentDescription="@string/enable_or_disable_biometric_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bioMetricTV"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/bioMetricInfoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biometric_info"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bioMetricSw"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/bioMetricDemoInfoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biometric_info_"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bioMetricInfoTV"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>