<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/sortTV"
                android:layout_width="@dimen/_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:text="@string/thank_you_for_submitting_your_review"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/closeBt"
                android:layout_width="200dp"
                android:layout_height="58dp"
                android:layout_marginTop="@dimen/_20"
                android:backgroundTint="@color/green"
                android:contentDescription="@string/closes_review_dialog"
                android:text="@string/_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sortTV" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
